docs(swagger): 按业务区分defination
